agregar lenguajes de programacion

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <p>Curso de administración de personal</p>
             <p>Curso de programacion de aplicaciones de gestión</p>
             <p>Curso de HTML 4.0</p>
+            <p>Lenguajes de programacion: Basic, Cobol, Pascal, C, Visual Basic, Html5, Css, Javascrip, Php, MySql</p>
         </div>
         <div id="laboral">
             <!-- Experiencia laboral -->
